parallel streams + small fixes